# statusphere-example-app

./: .gitignore  README.md
client/: Cargo.toml
client/src/: http.rs  main.rs  private_statusphere.rs
lexicons/: keyPackage.json  message.json
src/: db.ts  index.ts  ingester.ts  routes.ts
src/auth/: client.ts
src/lexicon/: index.ts  lexicons.ts
src/lexicon/types/com/atproto/label/: defs.ts
src/lexicon/types/xyz/statusphere/private/: key.ts  message.ts  status.ts
