[package]
name = "statusphere-private-client"
version = "0.1.0"
edition = "2021"


[dependencies]
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_memory_storage = "0.3.0"
openmls_traits = "0.3.0"
openmls_rust_crypto = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"